--- a/final/css/styles.css
+++ b/final/css/styles.css
@@ -16,7 +16,7 @@
      --font-heading: 'Merriweather', serif;
      --font-body: 'Open Sans', sans-serif;
      --bg-color: #f9fafb;
-     --text-color: #23272f;
+     --text-color: #83d9ee;
      --primary-color: #25603b;
      --accent-color: #cecfcf;
 }
