--- a/final/css/styles.css
+++ b/final/css/styles.css
@@ -18,7 +18,7 @@
      --bg-color: #f9fafb;
      --text-color: #83d9ee;
      --primary-color: #25603b;
-     --accent-color: #cecfcf;
+     --accent-color: #4bfdfd;
 }
 
 [data-theme="dark"] {
