--- a/final/css/styles.css
+++ b/final/css/styles.css
@@ -48,7 +48,7 @@ body {
 .logo {
      font-family: var(--font-heading);
      font-size: 1.5rem;
-     color: #a5e6f7;
+     color: #5dddfd;
      text-decoration: none;
      letter-spacing: 2px;
 }
